<resources>
    <string name="app_name">Today Astro</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_web">Browser</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_internet">No Internet!</string>
    <string name="loading">Loading..</string>
    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Total Amount :</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="terms_header">License Agreement</string>
    <string name="terms_text1">This End User License Agreement (“Agreement”) sets forth the terms and conditions governing the use of any Mohan Astro mobile application downloaded or otherwise acquired by you (the “App”) that is designed to operate on any device you own or control which runs any non-Apple Inc. mobile operating system (“Device”).\n\nBy using this App, you agree to be bound by the terms and conditions of this Agreement.\n\nYou acknowledge that this Agreement is entered into by and between you and the Mohan Astro affiliate identified in the App as licensor of the App, and not with any third party Device platform or associated service provider or telecommunications carrier or the third party from whom you are downloading this App or any of their affiliates (each, a “Service Provider”, collectively, “Service Providers”). You also acknowledge that Service Providers have no obligation hereunder to furnish any maintenance and support services with respect to the App. If documentation is provided with the App, you may copy and use the documentation for your internal, reference purposes.\n\nYou must also comply with the usage rules established by any Service Providers that apply to your Device ("Usage Rules"). Such Usage Rules are incorporated herein by reference. It is your responsibility to determine what Usage Rules apply to your use of the App, as they may be applicable to you depending on (i) your Device, (ii) the method by which you downloaded or otherwise acquired the App, and (iii) the third party from whom you downloaded or otherwise acquired the App. Any third party Device platform or the third party from whom you are downloading this App may make it a condition of their agreements with you, that the App made available through such distribution service, be downloaded, installed and used only on certain proprietary handheld software platforms operating on a Device.\n\n</string>
    <string name="terms_text2">you do not wish to accept this Agreement, do not use the App.</string>
    <string name="terms_text3">Changes\n\nMohan Astro reserves the right to update, revise, supplement and otherwise modify this Agreement from time to time. Any such changes to this Agreement will be effective immediately for new users and thirty (30) days after notification (including by posting a notice on the applicable Mohan Astro website) for current users. Registered users are encouraged to review this Agreement periodically for changes. If you do not wish to accept any change, please uninstall and discontinue using the App. Your continued use of the App following the thirty (30) day notice period constitutes your acceptance of those changes.\n\nSecurity\n\nThe information that the App collects may be stored locally on your Device and may be transmitted to our servers in countries where Mohan Astro, its affiliates or any of their service providers operate. The transmission of information over wireless and wired networks is not inherently secure. Mohan Astro uses many tools to help protect your personal information against unauthorized access and disclosure. However, we do not guarantee that your personal information or private communications will always remain private when using the App.\n\nUser control and uninstall\n\nYou can access and change user settings for the App or delete your search history from the options/settings menu on your Device. Uninstallation methods vary depending on your Device. To uninstall the App, please consult your Device manual.\n\nGrant of license\n\nMohan Astro grants to you a non-transferable, non-exclusive and revocable license to install one copy of the App on your Device (except that one copy of the App made available and downloaded from the “Windows Phone Marketplace” distribution service may be downloaded on up to five (5) mobile devices associated with your “Windows Live ID,” without payment of any additional fees to Mohan Astro (from either Windows Phone Marketplace’s owner or operator or you)) and use the App according to the terms and conditions set forth in this Agreement. The App is licensed, not sold, to you. Except as expressly granted by this Agreement or otherwise by Mohan Astro or its licensors in writing, you acquire no right, title or license in the App or any data, software, content, application or materials accessed from or incorporated in the App. This Agreement does not give you any rights to any updates or upgrades to the App or to any maintenance releases, patches, fixes, extensions or enhancements (collectively, “Updates”) to the App developed by Mohan Astro or its suppliers or licensors at any time in the future. Except as required under applicable law, this license does not entitle you to receive any maintenance or support services with respect to the App. Mohan Astro may provide Updates and/or support. If provided by Mohan Astro, Updates may be delivered automatically or you may be notified when a new Update is ready to be installed, or we make such Updates available for download. You authorize Mohan Astro to deliver automatically any Update if we believe it is necessary to provide for the continued functionality of the App or for any reasonable business purpose. Your use of the Updates will be governed by this Agreement unless you are asked to agree to new or additional terms at the time of download or installation. You also agree that you may have to enter into a renewed version of this Agreement if you want to download, install or use a new or modified version of the App.\n\nLicense restrictions\n\nYou agree to the following license restrictions: (a) to use the App solely for your personal use; (b) to not install or use a copy of the App on a device that you do not own or control; © to not duplicate, copy or distribute the App, except as necessary to use it on your Device; (d) to not license, sell, rent, lease, lend, transfer, assign, distribute, host, outsource, disclose or otherwise commercially exploit the App or make the App available to any third party; (e) to not use the App for any fraudulent, unlawful or illegal activity or in any way that could harm the App or impair anyone else’s use of it or a wireless network or to try to gain unauthorized access to any service, data, account or network by any means; (f) to not modify, translate, or create derivative works based on the App or disassemble, decompile or reverse engineer any part of the App, except and only to the extent that applicable law expressly permits, despite this limitation; (g) to not work around any technical limitations in the App; and (h) to preserve all copyright and other proprietary rights notices on the App and all copies thereof.\n\nTerm and termination\n\nThe license is effective for an indefinite period of time, until Mohan Astro terminates it, or until you provide notice to Mohan Astro of your decision to terminate it. Your rights under this license will terminate automatically without notice to you if you fail to comply with any of the provisions of this Agreement. Mohan Astro reserves the right to suspend, discontinue, enhance, update or otherwise modify the App, or its availability to you, at any time without notice. Upon termination of the license to the App, you will cease all use of the App.\n\nWarranty\n\nThe App is provided subject to the ‘Disclaimer of Warranties and Liability’ section of the Mohan Astro Website Terms and Conditions. Service Providers have no warranty obligation hereunder and give no guarantees with respect to the App or in relation to the sale, distribution or use thereof. Any claims, losses, liabilities, damages, costs or expenses attributable to any failure to conform to Mohan Astro’s warranty will be Mohan Astro’s sole responsibility. To the extent permitted by applicable law, Service Providers exclude any implied warranties or conditions, including, without limitation, any implied warranties or conditions of quality, performance, results, durability, title, merchantability, fitness for a particular purpose and non-infringement arising by statute or otherwise in law or from a course of dealing or usage of trade arising out of or related to this Agreement or arising out of or related to any associated programs, processes, products or services or their performance or their failure to perform. Service Providers shall not be responsible for any breach of this Agreement.\n\nProduct claims\n\nYou acknowledge that Mohan Astro, not any Service Provider, is responsible for addressing any claim you or any third party may have relating to the App or your possession and/or use of the App, including but not limited to: (i) product liability claims; (ii) any claim that the App fails to conform to any applicable legal or regulatory requirement; and (iii) claims arising under consumer protection or similar legislation.\n\nIntellectual property rights\n\nYou acknowledge that, in the event of any third party claim that the App or your possession and/or use of the App infringes that third party’s intellectual property rights, Mohan Astro, not any Service Provider, will be solely responsible for the investigation, defense, settlement and discharge of any such intellectual property infringement claim.\n\nThird party beneficiary\n\nYou acknowledge and agree that Service Providers are third party beneficiaries of these terms and upon your acceptance of the terms of this Agreement, Service Providers will have the right (and are deemed to have accepted the right) to enforce these terms against you as a third party beneficiary thereof.\n\nProduct questions and contact\n\nThe Mohan Astro company that licenses the App, not any Service Provider, is responsible for addressing any questions, comments or claims relating to the App and/or your use of the App. See below the Mohan Astro companies and addresses to which you can direct your questions:\n\nThis End User License Agreement (this “Agreement”) is a legal agreement between you and so MobiSocial Incorporated (“MobiSocial,” “we,” “us” or “our”) regarding our Android app (“Omlet”) which you have chosen to download from the Google Play store; their is located at https://play.google.com/store. Both we and you acknowledge that this Agreement is between us and you, and that Google, Inc. and its subsidiaries (collectively, “Google”) is not a party to this Agreement.\n\nThis Agreement incorporates by reference the Google Play Store Terms of Service http://play.google.com/intl/en_us/about/play-terms.html (the “Google Play Terms of Service”). Upon valid acceptance of this Agreement, you agree and understand that you are bound by the Google Play Terms of Service.\n\n</string>
    <string name="terms_text4">If you do not wish to accept this Agreement, do not use the App.</string>
    <string name="war_msg">"If Technical Power is greater than Astro Power for a team then go for greater Technical Power 1st Team, but if Astro Power is greater than Technical Power and greater Astro Power team is in his home ground then go for greater Astro Power team.""</string>
</resources>