<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryTwo"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/small_btn_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/join_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"              
                android:text="Terms and Condition"
                android:textColor="@color/white"/>
        </LinearLayout>

  
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/terms_header" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:text="@string/terms_text1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/terms_text2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:text="@string/terms_text3" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/terms_text4" />


        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/small_btn_bg"
            android:text="OK"
            android:textColor="@color/white" />
    </LinearLayout>
      </LinearLayout>
</ScrollView>